Update index.html for Christmas theme

--- a/index.html
+++ b/index.html
@@ -3,21 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muñecos de Mercy</title>
+    <title>🎄 Muñecos de Navidad por Mercy 🎁</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <header>
-        <h1>Catálogo de Muñecos</h1>
-        <h2>Hechos por Mercy</h2>
+    <header class="navidad-header">
+        <h1 class="titulo-principal">Muñecos <span class="resaltado">Navidad</span></h1>
+        <p class="subtitulo">¡Compra tus regalos de navidad!</p>
+        <p class="marca">Creaciones de Mercy</p>
     </header>
 
     <main id="galeria-container">
         </main>
 
-    <footer>
-        <p>Muñecos de Mercy &copy; 2025</p>
+    <footer class="navidad-footer">
+        <p>Hecho con amor por Mercy &copy; 2025</p>
+        <p>¡Felices Fiestas!</p>
     </footer>
 
     <script src="script.js"></script>
