Revise index.html for festive theme and animations
Updated the title and added new header content with animations and festive elements.

--- a/index.html
+++ b/index.html
@@ -3,26 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎄 Muñecos de Navidad por Mercy 🎁</title>
+    <title>🎄 Muñecos Mágicos de Navidad por Mercy 🎁</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <header class="navidad-header">
-        <h1 class="titulo-principal">Muñecos <span class="resaltado">Navidad</span></h1>
-        <p class="subtitulo">¡Compra tus regalos de navidad!</p>
-        <p class="marca">Creaciones de Mercy</p>
+    <div class="snow-container"></div> <header class="navidad-header">
+        <div class="header-content">
+            <h1 class="titulo-principal">
+                Muñecos <span class="resaltado animacion-brillo">Navidad</span>
+            </h1>
+            <p class="subtitulo">¡La magia de las fiestas en tus manos!</p>
+            <p class="marca">Creaciones hechas con amor por Mercy</p>
+        </div>
+        <div class="guirnalda top-left"></div>
+        <div class="guirnalda top-right"></div>
+        <div class="guirnalda bottom-left"></div>
+        <div class="guirnalda bottom-right"></div>
     </header>
 
     <main id="galeria-container">
         </main>
 
     <footer class="navidad-footer">
-        <p>Hecho con amor por Mercy &copy; 2025</p>
-        <p>¡Felices Fiestas!</p>
+        <p>&copy; 2025 Mercy - Todos los derechos reservados.</p>
+        <p>✨ ¡Que tengas unas felices fiestas! ✨</p>
     </footer>
 
     <script src="script.js"></script>
