Add banner section with image to index.html
Added a banner section with an image to the HTML.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <div class="guirnalda bottom-right"></div>
     </header>
 
+    <section class="banner-container">
+        <img src="imagenes/banner-dibujo.jpg" alt="Ilustración de muñecos de navidad">
+    </section>
+    
+    <main id="galeria-container">
+    
     <main id="galeria-container">
         </main>
 
@@ -36,3 +42,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
